# poodle-python

./: .flake8  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: send_email.py
poodle/: __init__.py  client.py  exceptions.py
tests/: __init__.py  test_client.py
