[tool.poetry]
name = "poodle-python"
version = "0.1.1"
description = "Python SDK for the Poodle's email sending API"
authors = ["Wilbert Liu <wilbert@usepoodle.com>"]
readme = "README.md"
packages = [{include = "poodle"}]
license = "MIT"
homepage = "https://usepoodle.com"
repository = "https://github.com/usepoodle/poodle-python"
documentation = "https://github.com/usepoodle/poodle-python"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Email",
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"
pytest-mock = "^3.11.1"
types-requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=poodle --cov-report=term-missing -v"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
